.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apcntl__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_apcntl</customHelpPage>
    <description>apcntl__c</description>
    <fields>
        <fullName>rstkf__apcntl_1099nectemplate__c</fullName>
        <inlineHelpText>Defines the 1099-NEC template to be defaulted in the 1099 process.</inlineHelpText>
        <label>Default 1099-NEC Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_1099printpkg__c</fullName>
        <inlineHelpText>Define a 3rd Party application being used for printing 1099&apos;s, if applicable. Current options are 

S-Docs 
Conga</inlineHelpText>
        <label>Package for 1099 Printing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S-Docs</fullName>
                </value>
                <value>
                    <fullName>Conga</fullName>
                </value>
                <value>
                    <fullName>RootForms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_1099template__c</fullName>
        <label>Default 1099-MISC Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_apbatchopt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, multiple Payable Transactions can be contained within a session. When unchecked, each Payable Transaction is its own session (one-for-one).</inlineHelpText>
        <label>Multiple Transactions per Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_apclracct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>AP Clearing Account used when performing manual AP transactions within the given company.  Dropdown is filtered to only display those GL Accounts where the AP Account Type = Accrued Accounts Payable.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (AP Clearing Account)</relationshipLabel>
        <relationshipName>apcntls5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_apexchratevaracct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default AP Exchange Rate Variance Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Foreign Exchange Variance.</inlineHelpText>
        <label>Default AP Exchange Rate Variance Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls</relationshipLabel>
        <relationshipName>apcntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_apfreightacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Freight Account used when performing applicable manual AP transactions within the given company.  Dropdown is filtered to only display those GL Accounts where the AP Account Type = Freight.</inlineHelpText>
        <label>Default Freight Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default Freight Account)</relationshipLabel>
        <relationshipName>apcntls1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_aptaxacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Tax Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Tax.</inlineHelpText>
        <label>Default Tax Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default Tax Account)</relationshipLabel>
        <relationshipName>apcntls2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_aptrmdisctknacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Terms Discount Variance Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Terms Discount Taken.</inlineHelpText>
        <label>Default Terms Discount Taken Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default Terms Discount Taken Account)</relationshipLabel>
        <relationshipName>apcntls3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankdefltadjclearing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Bank Balance Adjustment Clearing Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Expense.</inlineHelpText>
        <label>Default Bank Bal Adjust Clearing Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default bank balance adj clearing acct)</relationshipLabel>
        <relationshipName>apcntls12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankdefltcrcardpmtoffset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Bank-Reported Credit Card Payment Debit Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Expense.</inlineHelpText>
        <label>Default Bank-Reported CC Payment Dr Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default bank-reported crcard pmt dr acct)</relationshipLabel>
        <relationshipName>apcntls15</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankdeflttransfervar__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Cash Transfer Variance Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Expense.</inlineHelpText>
        <label>Default Cash Transfer Variance Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default cash transfer variance account)</relationshipLabel>
        <relationshipName>apcntls13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankdefltvoidpmtclearing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Voided Payment Clearing Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Expense.</inlineHelpText>
        <label>Default Voided Payment Clearing Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default voided payment clearing account)</relationshipLabel>
        <relationshipName>apcntls14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankeftcharges__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Bank Outgoing EFT/ACH Charges Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Expense.</inlineHelpText>
        <label>Bank Outgoing EFT/ACH Charges</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Bank outgoing EFT/ACH charges)</relationshipLabel>
        <relationshipName>apcntls10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankpmtvarmulticurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Multi-Currency Payment Variance Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Expense.</inlineHelpText>
        <label>Multi-Currency Payment Variance Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Payment variance account, multi-currency)</relationshipLabel>
        <relationshipName>apcntls9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankpmtvarsinglecurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Single-Currency Payment Variance Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Expense.</inlineHelpText>
        <label>Single-Currency Payment Variance Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Payment variance account,single currency)</relationshipLabel>
        <relationshipName>apcntls8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankreconshowamt__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, pay amounts will be displayed in the reconciliation process</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_bankservicecharges__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Bank Service Charges Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Expense.</inlineHelpText>
        <label>Bank Service Charges</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Bank service charges)</relationshipLabel>
        <relationshipName>apcntls11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_checkprintpkg__c</fullName>
        <inlineHelpText>Define a 3rd Party application being used for printing checks, if applicable.  Current options are

S-Docs
Conga
RootForms</inlineHelpText>
        <label>Package for Check Printing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S-Docs</fullName>
                </value>
                <value>
                    <fullName>Conga</fullName>
                </value>
                <value>
                    <fullName>RootForms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_checkprinttempl__c</fullName>
        <inlineHelpText>Defines the check print template to be defaulted in the check print process.  Additional values can be added to picklist values to select from.  Current option = Accounts Payable Check.</inlineHelpText>
        <label>Default Check Print Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_createjbf__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apcntl_createjbf__c</description>
        <inlineHelpText>This field activates the creation of data to support the export of Payment Session data in Japanese Bank Format.  The JBF object is populated for a given session at the time the session is closed and posted.</inlineHelpText>
        <label>Create JBF Export from Payment Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_daysbetweencheckruns__c</fullName>
        <inlineHelpText>Set value here for the typical number of days between check runs.  Default = 7, but can be adjusted by user.  Value must be between 1 and 365.</inlineHelpText>
        <label>Days Between Check Runs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_dfltaccruedapacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Accrued AP Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Accrued Accounts Payable.</inlineHelpText>
        <label>Default Accrued AP Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default Accrued AP Account)</relationshipLabel>
        <relationshipName>apcntls6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_dfltapacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default AP Account used when performing manual AP transactions within the given company.  Dropdown is filtered to only display those GL Accounts where the AP Account Type = Accounts Payable.</inlineHelpText>
        <label>Default AP Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Default AP Account)</relationshipLabel>
        <relationshipName>apcntls4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_dfltcctype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Credit Card Account used when a Vendor has a Pay Type of Credit Card and the Credit Card Account is not otherwise specified</inlineHelpText>
        <label>Default Credit Card Account</label>
        <referenceTo>rstkf__glapcc__c</referenceTo>
        <relationshipLabel>AP Controls</relationshipLabel>
        <relationshipName>apcntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_dfltprepayholdcode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When a Prepay Payable Transaction is placed on Hold, this is the Reason Code that is defaulted (and that can be overridden as necessary)</inlineHelpText>
        <label>Default Prepay Hold Reason Code</label>
        <referenceTo>rstkf__glrsn__c</referenceTo>
        <relationshipLabel>AP Controls</relationshipLabel>
        <relationshipName>apcntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_dfltremittempl__c</fullName>
        <description>Default Remittance Advice Template</description>
        <inlineHelpText>This field carries the default RootForms template to be used in the generation of Remittance Advice documents from Payment Selection.  This template will be used unless overridden on a Vendor-Company.</inlineHelpText>
        <label>Default Remittance Advice Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_duedateaspaydate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Invoice Due Date for Payment Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The company for which this AP Control record pertains</inlineHelpText>
        <label>Company Number</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>AP Controls</relationshipLabel>
        <relationshipName>apcntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_jbfebcdic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apcntl_jbfebcdic__c</description>
        <inlineHelpText>This field indicates that the Japanese Bank Format export will carry the EBCDIC designator vs. the Japanese Industrial Standard (which is the same as ASCII).</inlineHelpText>
        <label>JBF Export Sent in EBCDIC (vs. JIS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_noapatodups__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>With this option active, any uploaded Payable Transactions (thru APATO) that have a Document Number that already exists on a Payables Invoice will be rejected as a duplicate</inlineHelpText>
        <label>Reject duplicate upload transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_notxndelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>apcntl_notxndelete__c</description>
        <label>Prevent Delete of Payable Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_numbremits_perstub__c</fullName>
        <inlineHelpText>Use this field to define how many Remittance Details to display on a given AP Check</inlineHelpText>
        <label>Remittance Details per AP Check</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_offsetacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Offset Clearing Account</description>
        <inlineHelpText>This field is used on the offsetting AR Credit Memos (DR) and AP Vendor Credits (CR) created as part of the Payment Offset process.</inlineHelpText>
        <label>Payment Offset Clearing Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Payment Offset Clearing Account)</relationshipLabel>
        <relationshipName>apcntles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_paymentday__c</fullName>
        <description>Payment Offset Payment Day</description>
        <inlineHelpText>This field carries the day of the month used to the derive the Payment Date for the offsetting of payable and receivable transactions.</inlineHelpText>
        <label>Payment Offset Payment Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_rcptexchratevaracct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Default Receipt Exchange Rate Variance Account used when performing applicable manual AP transactions within the given company. Dropdown is filtered to only display those GL Accounts where the AP Account Type = Foreign Exchange Variance.</inlineHelpText>
        <label>Receipt Exchange Rate Variance Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>AP Controls (Receipt Exchange Rate Variance Acct)</relationshipLabel>
        <relationshipName>apcntls7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_remitprintopt__c</fullName>
        <label>Z_OBSOLETE</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_verifycheckrun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_voidoncancel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void Checks on Cancel of Payment Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_whtcerttemplate__c</fullName>
        <label>WHT Certificate Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apcntl_whtreturntemplate__c</fullName>
        <label>WHT Return Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apcntl_glcmp__r.rstkf__externalid__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apcntl_glcmp__r.Name</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AP Control</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AP_Controls</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apcntl_glcmp__c</columns>
        <columns>rstkf__apcntl_apbatchopt__c</columns>
        <columns>rstkf__apcntl_dfltcctype__c</columns>
        <columns>rstkf__apcntl_dfltprepayholdcode__c</columns>
        <columns>rstkf__apcntl_checkprintpkg__c</columns>
        <columns>rstkf__apcntl_checkprinttempl__c</columns>
        <columns>rstkf__apcntl_1099printpkg__c</columns>
        <columns>rstkf__apcntl_1099template__c</columns>
        <columns>rstkf__apcntl_daysbetweencheckruns__c</columns>
        <columns>rstkf__apcntl_dfltapacct__c</columns>
        <columns>rstkf__apcntl_dfltaccruedapacct__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AP Controls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AP_Controls_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apcntl_glcmp__c</columns>
        <columns>rstkf__apcntl_apbatchopt__c</columns>
        <columns>rstkf__apcntl_dfltcctype__c</columns>
        <columns>rstkf__apcntl_dfltprepayholdcode__c</columns>
        <columns>rstkf__apcntl_checkprintpkg__c</columns>
        <columns>rstkf__apcntl_checkprinttempl__c</columns>
        <columns>rstkf__apcntl_daysbetweencheckruns__c</columns>
        <columns>rstkf__apcntl_dfltapacct__c</columns>
        <columns>rstkf__apcntl_dfltaccruedapacct__c</columns>
        <columns>rstkf__apcntl_bankreconshowamt__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AP Controls - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__apcntl_numbremits_perstub_less_than_zero</fullName>
        <active>true</active>
        <description>Remittance Details per AP Check cannot be less than Zero</description>
        <errorConditionFormula>rstkf__apcntl_numbremits_perstub__c &lt; 0</errorConditionFormula>
        <errorMessage>Remittance Details per AP Check cannot be less than Zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__bankOutgoingEFTACHChrgIsReqd</fullName>
        <active>true</active>
        <description>Bank outgoing EFT/ACH charges is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_bankeftcharges__c )</errorConditionFormula>
        <errorMessage>Bank outgoing EFT/ACH charges is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__bankServiceChrgIsReqd</fullName>
        <active>true</active>
        <description>Bank service charges is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_bankservicecharges__c )</errorConditionFormula>
        <errorMessage>Bank service charges is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__companyisreqandnotbemodifiable</fullName>
        <active>true</active>
        <description>Company Number is required and cannot be modified</description>
        <errorConditionFormula>ISBLANK(rstkf__apcntl_glcmp__c)
||(!ISNEW() &amp;&amp; ISCHANGED(rstkf__apcntl_glcmp__c))</errorConditionFormula>
        <errorMessage>Company Number is required and cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__daysbetweenchkrunsbetwn1and365</fullName>
        <active>true</active>
        <description>Days Between Check Runs must be in between 1 and 365</description>
        <errorConditionFormula>rstkf__apcntl_daysbetweencheckruns__c &lt; 1 || rstkf__apcntl_daysbetweencheckruns__c &gt; 365</errorConditionFormula>
        <errorMessage>Days Between Check Runs must be in between 1 and 365</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defBankBalAdjClearAcctIsReqd</fullName>
        <active>true</active>
        <description>Default bank balance adj clearing acct is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_bankdefltadjclearing__c )</errorConditionFormula>
        <errorMessage>Default bank balance adj clearing acct is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defBankReprtCrCardPmtDrAcctIsReq</fullName>
        <active>true</active>
        <description>Default bank-reported crcard pmt dr acct is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_bankdefltcrcardpmtoffset__c )</errorConditionFormula>
        <errorMessage>Default bank-reported crcard pmt dr acct is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defCashTrnsfrVarAccountIsReqd</fullName>
        <active>true</active>
        <description>Default cash transfer variance account is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_bankdeflttransfervar__c )</errorConditionFormula>
        <errorMessage>Default cash transfer variance account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defTermsDiscTakenAcctIsReq</fullName>
        <active>true</active>
        <description>Default Terms Discount Taken Account is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_aptrmdisctknacct__c )</errorConditionFormula>
        <errorMessage>Default Terms Discount Taken Account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defVoidedPaymtClearAcctIsReqd</fullName>
        <active>true</active>
        <description>Default voided payment clearing account is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_bankdefltvoidpmtclearing__c )</errorConditionFormula>
        <errorMessage>Default voided payment clearing account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defapexchratevaracctisrequired</fullName>
        <active>true</active>
        <description>Default APExchange Rate Variance Account is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_apexchratevaracct__c )</errorConditionFormula>
        <errorMessage>Default APExchange Rate Variance Account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defaultAccruedAPAcctIsReq</fullName>
        <active>true</active>
        <description>Default Accrued AP Account is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_dfltaccruedapacct__c )</errorConditionFormula>
        <errorMessage>Default Accrued AP Account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defaultTaxAccountIsRequired</fullName>
        <active>true</active>
        <description>Default Tax Account is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_aptaxacct__c )</errorConditionFormula>
        <errorMessage>Default Tax Account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defaultapaccountisrequired</fullName>
        <active>true</active>
        <description>Default AP Account is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_dfltapacct__c )</errorConditionFormula>
        <errorMessage>Default AP Account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__defaultfreightaccountisrequired</fullName>
        <active>true</active>
        <description>Default Freight Account is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_apfreightacct__c )</errorConditionFormula>
        <errorMessage>Default Freight Account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__incorrectvalfordefcredcardtype</fullName>
        <active>true</active>
        <description>Incorrect value entered for Default Credit Card Type</description>
        <errorConditionFormula>!ISBLANK( rstkf__apcntl_dfltcctype__c ) &amp;&amp; 
(  rstkf__apcntl_dfltcctype__r.rstkf__glapcc_cmpno__c
&lt;&gt; rstkf__apcntl_glcmp__c)</errorConditionFormula>
        <errorMessage>Incorrect value entered for Default Credit Card Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__incorrectvalfordefprepayhldcode</fullName>
        <active>true</active>
        <description>Incorrect value entered for Default Prepay Hold Code</description>
        <errorConditionFormula>!ISBLANK(rstkf__apcntl_dfltprepayholdcode__c) 
&amp;&amp;( rstkf__apcntl_dfltprepayholdcode__r.rstkf__glrsn_cmpno__c &lt;&gt;  rstkf__apcntl_glcmp__c)</errorConditionFormula>
        <errorMessage>Incorrect value entered for Default Prepay Hold Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__paymntVarAcctMultiCurrIsReq</fullName>
        <active>true</active>
        <description>Payment variance account, multi-currency is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_bankpmtvarmulticurr__c )</errorConditionFormula>
        <errorMessage>Payment variance account, multi-currency is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__paymntVarAcctSingleCurrIsReq</fullName>
        <active>true</active>
        <description>Payment variance account,single currency is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_bankpmtvarsinglecurr__c )</errorConditionFormula>
        <errorMessage>Payment variance account,single currency is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__recptExchgRtVarAcctIsReq</fullName>
        <active>true</active>
        <description>Receipt Exchange Rate Variance Acct is required</description>
        <errorConditionFormula>ISBLANK( rstkf__apcntl_rcptexchratevaracct__c )</errorConditionFormula>
        <errorMessage>Receipt Exchange Rate Variance Acct is required</errorMessage>
    </validationRules>
</CustomObject>